plot making code added

--- a/Analysis/analysis_config.cfg
+++ b/Analysis/analysis_config.cfg
@@ -1,8 +1,8 @@
 [io]
-infile_name   = /mnt/harddisk2/dyjets/dyellell01234j_5f_LO_MLM/Events/dyjets_delpes.root
-outfile_name  = dyjets_delphes.root
+infile_name   = /mnt/harddisk2/wjets/wellnu01234j_5f_LO_MLM/Events/wjets_delphes.root
+outfile_name  = /mnt/harddisk4/scratch/wjets_flat.root
 
 [cuts]
-n_btag        = 1
+n_btag        = 0
 n_light_jet   = 4
 MET_threshold = 20
